--- a/meicloud-security-demo/src/main/resources/application.properties
+++ b/meicloud-security-demo/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.session.store-type = none
 #session\u8D85\u65F6\u65F6\u95F4\uFF0C\u5355\u4F4D\u79D2
 server.session.timeout = 600
 
-security.basic.enabled = false
+security.basic.enabled = true
 
 server.port = 8080
