自定义认证用户源码解析

--- a/meicloud-security-demo/src/main/resources/application.properties
+++ b/meicloud-security-demo/src/main/resources/application.properties
@@ -12,3 +12,5 @@ server.session.timeout = 600
 security.basic.enabled = true
 
 server.port = 8080
+
+meicloud.security.browser.signInPage = /demo-signIn.html
